--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,20 @@ body {
   margin-bottom: 0px;
 }
 .kop h1 {
-  margin-left: 2px;
+  margin-left: 6px;
+  font-size: xx-large;
+  font-family: "EB Garamond", serif;
+  font-weight: 200;
 }
+
+.boom {
+  font-family: "EB Garamond", serif;
+  font-size: xx-large;
+  font-weight: 300;
+  font-style: italic;
+
+}
+
 p.copyright {
   font-size: .6em;
   color: white;
@@ -18,6 +30,7 @@ p.copyright {
   position: relative;
   display: inline-block;
   font-weight: 100;
+  margin-right: 4px;
 }
 
 table input {
@@ -29,7 +42,7 @@ table input {
 }
 
 .teams {
-  background-color: beige;
+  background-color: var(--color-cyan-100);
   border: 1px solid blue;
   padding: 4px;
   margin: 5px;
@@ -39,7 +52,7 @@ table input {
   border-radius: 5px;
 }
 .schema {
-  background-color: #f2f8b6;
+  background-color: var(--color-cyan-50);
   border: 1px solid blue;
   border-radius: 5px;
   padding: 6px;
@@ -51,7 +64,7 @@ table input {
   background-color: white;
 }
 .stand {
-  background-color: rgb(199, 238, 204);
+  background-color: var(--color-cyan-100);
   border: 1px solid blue;
   border-radius: 5px;
   padding: 2px 5px;
@@ -67,7 +80,7 @@ table input {
 }
 
 .teamlijst {
-  background-color: rgb(158, 207, 240);
+  background-color: var(--color-cyan-100);
   border: 1px solid blue;
   border-radius: 5px;
   padding: 2px 10px;
@@ -77,12 +90,13 @@ table input {
   position: absolute;
   top: 0px;
   text-align: center;
-
+  font-size: .9em;
 }
 
 .stand h2{
   font-size: 1.2em;
-  color:var(--color-blue-500);
+  color:var(--color-green-800);
+  font-weight: bold;
   margin: 0px;
   padding:0px;
   text-align: center;
@@ -90,11 +104,17 @@ table input {
 
 .schema h2{
   font-size: 1.2em;
-  color:var(--color-blue-500);
+  color:var(--color-green-800);
   margin:0px;
   padding:0px;
 }
-
+.finale {
+  background-color: var(--color-cyan-200);
+  border: 1px solid blue;
+  border-radius: 5px;
+  padding: 6px;
+  margin: 1px 3px;
+}
 .teamnaam {
   background-color: white;
   width: 10px;
@@ -106,7 +126,7 @@ td.team {
 }
 
 .toprow {
-  background-color: var(--color-blue-500);
+  background-color: var(--color-cyan-600);
   color: black;
   text-align: left;
   margin: 8px;
@@ -120,7 +140,7 @@ td.team {
 }
 
 .maindiv {
-  background-color:darkgreen; 
+  background-color:var(--color-green-800);
   padding: 1px;
   max-width: 620px;
   padding-bottom: 4px;
@@ -150,17 +170,10 @@ ul.dbl{
 
 .teamSelected {
   /* text-decoration: line-through;  */
-  color: darkgreen;
+  color: var(--color-green-800);
+  font-size: 1rem;
   /* background-color: rgb(116, 206, 116); */
   /* visibility:hidden; */
-}
-
-button.bg-green-500 {
-  background-color: darkgreen;
-}
-
-button.bg-red-500 {
-  background-color: darkred;
 }
 
 button {
@@ -168,8 +181,15 @@ button {
 }
 
 button:disabled {
-  background-color: darkgrey;
-  color:black;
+  background-color: lightgrey;
+  color:darkgray;
+}
+
+button:hover:enabled {
+  background-color: var(--color-green-600);
+  color: white;
+  border-color: bisque;
+  border: 2px solid bisque;
 }
 
 /* tooltip */
