--- a/styles.css
+++ b/styles.css
@@ -204,29 +204,53 @@ button:hover:enabled {
   border: 2px solid bisque;
 }
 
-/* tooltip */
-.tooltip {
-  position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+.v-popper--theme-tooltip .v-popper__inner {
+  background-color: yellow;
+  color: darkblue;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.375rem;
+  border: 1px solid darkblue;
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,.1),
+              0 4px 6px -4px rgba(0,0,0,.1);
 }
-
-/* Tooltip text */
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
- 
-  /* Position the tooltip text - see examples below! */
-  position: absolute;
-  z-index: 1;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
+.v-popper--theme-tooltip .v-popper__arrow-inner { 
   visibility: visible;
+  border-color: darkblue;
+}
+.v-popper--theme-tooltip .v-popper__arrow-outer {
+  border-color: darkblue;
+}
+
+/* ERROR */
+.v-popper--theme-error .v-popper__inner {
+  background-color: #dc2626; /* red-600 */
+  color: white;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.375rem;
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,.1),
+              0 4px 6px -4px rgba(0,0,0,.1);
+}
+.v-popper--theme-error .v-popper__arrow-inner { 
+  visibility: visible;
+  border-color: #dc2626;
+}
+.v-popper--theme-error .v-popper__arrow-outer {
+  border-color: #dc2626;
+}
+
+/* INFO */
+.v-popper--theme-info .v-popper__inner {
+  background-color: #2563eb; /* blue-600 */
+  color: white;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.375rem;
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,.1),
+              0 4px 6px -4px rgba(0,0,0,.1);
+}
+.v-popper--theme-info .v-popper__arrow-inner { 
+  visibility: visible;
+  border-color: #2563eb;
+}
+.v-popper--theme-info .v-popper__arrow-outer {
+  border-color: #2563eb;
 }
