--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ button:disabled {
 }
 
 button:hover:enabled {
-  background-color: var(--color-green-600);
+  background-color: var(--color-sky-600);
   color: white;
   border-color: bisque;
   border: 2px solid bisque;
